# atom

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Atom Access Model Simplification PLAN.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  spec.md
.github/workflows/: docs.yml  rust.yml
apidocs/: grpc-reference.md  openapi.yaml
app/: .env.example  biome.json  package.json  pnpm-lock.yaml  proxy.ts
app/app/(admin)/: error.tsx
app/app/(admin)/actions/: page.tsx
app/app/(admin)/audit/: loading.tsx
app/app/(admin)/authz/: loading.tsx
app/app/(admin)/capabilities/: loading.tsx
app/components/: display-time.tsx
app/components/app-shell/: tenant-switcher.tsx  user-nav.tsx
app/components/audit/: audit-export-dialog.tsx  audit-log-page.tsx
app/components/capabilities/: capability-create-form.tsx
app/components/crud/: crud-table.tsx  crud-workspace-loading.tsx  crud-workspace.tsx  status-badge.tsx
app/components/dashboard/: dashboard-charts.tsx  dashboard-overview.tsx
app/components/endpoints/: api-endpoints-table.tsx
app/components/entities/: entity-audit-log.tsx  entity-credentials.test.tsx  entity-credentials.tsx
app/components/groups/: group-edit-form.tsx  group-inspect-details.tsx
app/components/guardrails/: action-assignment-rule-create-form.test.tsx  action-assignment-rule-create-form.tsx
app/components/playground/: graphql-playground.tsx
app/components/policy/: policy-create-form.tsx  policy-inspect-details.tsx  policy-summary.tsx
app/components/profile/: profile-form.test.tsx  profile-form.tsx
app/components/profiles/: profile-create-form.tsx  profile-edit-form.tsx  profile-inspect-details.tsx  profile-version-form.tsx
app/components/roles/: capability-picker.tsx  role-capabilities-panel.tsx  role-create-form.tsx  role-inspect-details.tsx
app/components/tenants/: tenant-create-form.tsx
app/components/ui/: chart.tsx  data-table.test.tsx  data-table.tsx  form.tsx  password-input.tsx
app/lib/: utils.ts
app/lib/auth/: constants.ts  session.ts
app/lib/crud/: resources.ts  retention.ts
app/lib/entity/: profile.ts
app/lib/graphql/: client.ts  server.ts
app/lib/policy/: summary.ts
app/lib/reconcile/: use-name-map.ts
app/tests/e2e/: admin-shell.spec.ts
console/: astro.config.mjs  package.json  pnpm-lock.yaml
console/src/components/: AuthPages.tsx  BackendStatus.tsx  ConsolePages.tsx  ConsolePrimitives.tsx  Dashboard.tsx  JsonSchemaForm.tsx  LoginPanel.tsx  RouteShell.astro
console/src/layouts/: ConsoleLayout.astro
console/src/lib/: auth.ts  graphql.ts  json.ts  operations.ts  routes.ts  schema.ts  snippets.ts
console/src/pages/: authz.astro  endpoints.astro  entities.astro  explorer.astro  groups.astro  index.astro  playground.astro  policies.astro  profiles.astro  resources.astro  settings.astro  templates.astro  tenants.astro
console/src/styles/: global.css
docs/: README.md  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
docs/app/: layout.config.tsx  layout.tsx
docs/app/[[...slug]]/: page.tsx
docs/components/: mermaid.tsx
docs/content/docs/: endpoints.mdx  index.mdx  magistrala-on-atom.mdx  meta.json  quickstart.mdx  simple-words.mdx
migrations/: 001_initial.sql  003_action_assignment_rule_uniqueness.sql  005_scope_and_tenanting.sql  006_entity_name_global_uniqueness.sql  006_guardrail_defaults.sql  007_profiles.sql  008_api_templates.sql  009_api_endpoints.sql  010_security_hardening.sql  010_signup_and_oidc.sql
postman/: Atom.postman_collection.json
product-docs/: 00-overview.md  01-authz-explain.md  02-entity-access.md  03-resource-access.md  04-audit.md  05-bulk-check.md  06-role-holders.md  07-group-access.md  08-effective-capabilities.md  09-admin-hygiene.md  10-magistrala-on-atom.md  11-access-model-simplification.md  13-access-tokens.md  IMPLEMENTATION_PLAN.md  PRD.md
proto/atom/v1/: atom.proto
src/: audit.rs  auth.rs  config.rs  crypto.rs  error.rs  grpc.rs  guardrails.rs  health.rs  keys.rs  lib.rs  main.rs  metrics.rs  purge.rs  rate_limit.rs  routes.rs  schema.rs  shutdown.rs
src/api_endpoints/: handlers.rs  mod.rs  repo.rs
src/api_templates/: repo.rs
src/authz/: access.rs  compat.rs  conditions.rs  engine.rs  handlers.rs  mod.rs  repo.rs
src/certs/: graphql.rs  repo.rs  service.rs
src/graphql/: admin.rs  api_endpoints.rs  api_templates.rs  auth.rs  authz.rs  console.rs  console_css.rs  console_html.rs  console_js.rs  credentials.rs  entities.rs  groups.rs  mod.rs  mutation.rs  operations.rs  policies.rs  profiles.rs  query.rs  resources.rs  schema.rs  tenants.rs  types.rs
src/graphql/types/: mod.rs
src/identity/: handlers.rs  mod.rs  profile_repo.rs  repo.rs  service.rs
src/models/: access.rs  action_assignment_rule.rs  api_endpoint.rs  api_template.rs  entity.rs  enums.rs  group.rs  mod.rs  policy.rs  profile.rs  resource.rs  role.rs  session.rs  tenant.rs  token.rs
src/tenants/: email.rs  handlers.rs  mod.rs  repo.rs
tests/: m10_graphql_profiles.rs  m11_graphql_primitives.rs  m12_graphql_identity.rs  m13_graphql_authz_admin.rs  m14_api_endpoints.rs  m14_api_templates.rs  m15_api_endpoints.rs  m16_action_assignment_rules.rs  m16_signup.rs  m17_certificates.rs  m18_aliases.rs  m19_tenant_listing.rs  m1_authz.rs  m1_authz_role_blocks.rs  m1_block_ownership.rs  m1_schema.rs  m21_soft_delete.rs  m22_restore.rs  m23_authenticate_credential.rs  m2_compat.rs  m3_lifecycle.rs  m4_gates.rs  m4_inheritance.rs  m5_bootstrap.rs  m6_conditions.rs  m7_audit.rs  m8_guardrails.rs  m9_profiles.rs
tests/common/: mod.rs
(+59 files in other folders)
