[package]
name = "atom"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Identity and Authorization service for IoT and cloud-native systems"

[[bin]]
name = "atom"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
async-graphql = { version = "=7.2.1", default-features = false, features = ["playground"] }
async-graphql-axum = "=7.0.13"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = { version = "0.18", default-features = false }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
rand = "0.8"
hex = "0.4"
p256 = { version = "0.13", features = ["pkcs8", "pem"] }
base64 = "0.22"
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
insta = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
