[package]
name = "atom"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Identity and Authorization service for IoT and cloud-native systems"

[[bin]]
name = "atom"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
async-graphql = { version = "=7.2.1", default-features = false }
async-graphql-axum = "=7.0.13"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = { version = "0.18", default-features = false }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
openidconnect = "4.0.1"
argon2 = { version = "0.5", features = ["std"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
rand = "0.8"
hex = "0.4"
ipnet = "2"
p256 = { version = "0.13", features = ["pkcs8", "pem"] }
base64 = "0.22"
tonic = { version = "0.12", features = ["tls"] }
tonic-health = "0.12"
prost = "0.13"
lettre = { version = "0.11.21", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
url = "2"
rcgen = { version = "0.14.8", features = ["pem", "x509-parser", "aws_lc_rs"] }
ocsp = "0.4.0"
ring = "0.17"
time = "0.3"
x509-parser = "0.18.1"
zeroize = "1"
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true, default-features = false }

[features]
# Metrics are on by default. Disable at compile time for maximum-performance
# builds (`--no-default-features`): the `crate::metrics` façade then compiles to
# inlined no-ops and the metrics crates are not linked at all. At runtime, leave
# the feature on but set ATOM_METRICS_ENABLED=false to skip recorder install and
# the /metrics route (façade calls fall through to the global no-op recorder).
default = ["metrics"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
insta = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
